--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,9 @@ language: bash
 
 sudo: required
 
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq [ rubygems, pip, nodejs ]
+
 script:
    - bash oh-my-gfw.sh
