--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ sudo: required
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq [ rubygems, pip, nodejs ]
+  - sudo apt-get install -qq rubygems pip nodejs
 
 script:
    - bash oh-my-gfw.sh
